Resizing des images et ajout des descriptions

--- a/assets/style.css
+++ b/assets/style.css
@@ -85,6 +85,7 @@ body {
 }
 
 .about-me__introduction {
+	font-size: 1rem!important;
 	font-family: 'Spectral';
 	font-weight: 800;
 	font-style: italic;
@@ -217,9 +218,14 @@ body {
 }
 
 .service__price p {
-	margin-top: 0;
+	margin-top: 0.5rem;
 	margin-bottom: .5rem;
 	line-height: 1.2;
+}
+
+.price {
+	font-size: calc(1.275rem + 0.3vw);
+	font-weight: 500;
 }
 
 #contact {
