Vérification avant soutenance

--- a/assets/style.css
+++ b/assets/style.css
@@ -100,10 +100,6 @@ body {
 	font-size: 14px;
 }
 
-#gallery {
-	/*	min-height: 100vh; */
-}
-
 .title {
 	text-align: center;
 	padding-block: 2em;
@@ -115,7 +111,7 @@ body {
 
 .nav-pills .nav-link.active,
 .nav-pills .show>.nav-link {
-	color: #fff;
+	color: black;
 	background-color: #BEB45A;
 	border-radius: 0;
 }
